# Agentic-Exchange

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml  render.yaml  requirements.txt  start_backend.sh  transactions-export-a7ccd387-8a90-4518-a0fa-20a5a1ca1fcc.xlsx
.github/workflows/: ci.yml  python-publish.yml  release.yml
Agents/: buyer_agent.py  llm_negotiator.py  negotiation_engine.py  seller_agent.py  strategy.py  utils.py
agentic_exchange/: README.md  __init__.py  api.py  client.py  exceptions.py  index.d.ts  index.js  models.py  package.json  utils.py
agentic_exchange_sdk/: README.md  __init__.py  api.py  client.py  exceptions.py  models.py  utils.py
agentic_exchange_sdk/examples/: example_usage.py
backend/: agent_runner.py  check_env.py  main.py  models.py  store.py
backend/backend/: __init__.py  main.py
backend/models/: __init__.py  schemas.py
backend/routes/: __init__.py  contract.py  deal.py  deals.py  marketplace.py  negotiation.py  root.py  tasks.py
backend/services/: __init__.py  agent_runtime.py  agent_service.py  algorand_service.py  deal_store.py  marketplace_store.py  negotiation_service.py  recommendation_service.py  storage_service.py
frontend/: .npmignore  frontend-0.0.0.tgz  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  polyfills.js
frontend/src/components/: AgentOrchestration.jsx  AnalyticsSection.jsx  CTA.jsx  ChatDemo.jsx  DeveloperPlatform.jsx  FAQ.jsx  FeaturedAgents.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  MultiAgentWorkflows.jsx  Navbar.jsx  NetworkStats.jsx  SecurityAudit.jsx  SideMenu.jsx  WalletModal.jsx  WhyAgenticExchange.jsx
frontend/src/context/: WalletContext.jsx
frontend/src/pages/: ActiveDeal.jsx  AgentDetails.jsx  AgentStudio.jsx  Billing.jsx  Completion.jsx  CreateDeal.jsx  Dashboard.jsx  DealSummary.jsx  Deals.jsx  Docs.jsx  Home.jsx  LegacyNegotiation.jsx  Marketplace.jsx  NegotiationRoom.jsx  WorkflowBuilder.jsx
frontend/src/services/: AlgorandWalletService.js  ContractService.js  DealService.js  MarketplaceService.js
scripts/: README.md  run-tests.bat  run-tests.ps1  setup-env.bat  setup-env.ps1
smart_contract/: compile.py  deploy_testnet.py  escrow_contract.py  marketplace_contract.py
tests/: test_api.py  test_models.py  test_sdk.py
