[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-exchange"
version = "0.1.0"
description = "Programmable AI negotiation and on-chain deal execution SDK"
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Rohan Kumar" },
    { name = "Abhishek Singh" },
]
dependencies = [
    "requests>=2.28"
]

[project.optional-dependencies]
http = ["httpx>=0.24"]
retry = ["tenacity>=8.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_exchange*"]
exclude = ["agentic_exchange_sdk*", "Agents*", "backend*", "frontend*", "smart_contract*", "tests*"]
